--- a/examples/orientation_classification/deepdive_examples/uptrain_edge_cases.ipynb
+++ b/examples/orientation_classification/deepdive_examples/uptrain_edge_cases.ipynb
@@ -20,9 +20,11 @@
     "import numpy as np\n",
     "import uptrain\n",
     "from contextlib import redirect_stdout\n",
+    "import sys\n",
+    "sys.path.insert(0,'..')\n",
     "\n",
-    "from dataset import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
-    "from pushup_signal import pushup_signal\n",
+    "from model_files import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
+    "from model_files import pushup_signal\n",
     "\n",
     "import joblib\n",
     "import json"
@@ -46,17 +48,28 @@
     "orig_training_file = 'data/training_data.json'\n",
     "if not os.path.exists(data_dir):\n",
     "    try:\n",
-    "        file_downloaded_ok = subprocess.check_output(\"wget \" + remote_url, shell=True)\n",
+    "        # Most Linux distributions have Wget installed by default.\n",
+    "        # Below command is to install wget for MacOS\n",
+    "        wget_installed_ok = subprocess.call(\"brew install wget\", shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
+    "        print(\"Successfully installed wget\")\n",
     "    except:\n",
+    "        dummy = 1\n",
+    "    try:\n",
+    "        if not os.path.exists(\"data.zip\"):\n",
+    "            file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
+    "            print(\"Data downloaded\")\n",
+    "        with zipfile.ZipFile(\"data.zip\", 'r') as zip_ref:\n",
+    "            zip_ref.extractall(\"./\")\n",
+    "        full_training_data = read_json(orig_training_file)\n",
+    "        np.random.seed(1)\n",
+    "        np.random.shuffle(full_training_data)\n",
+    "        reduced_training_data = full_training_data[0:1000]\n",
+    "        write_json(orig_training_file, reduced_training_data)\n",
+    "        print(\"Prepared Example Dataset\")\n",
+    "        os.remove(\"data.zip\")\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "        print(\"Could not load training data\")\n",
-    "    with zipfile.ZipFile(\"data.zip\", 'r') as zip_ref:\n",
-    "        zip_ref.extractall(\"./\")\n",
-    "\n",
-    "    full_training_data = read_json(orig_training_file)\n",
-    "    np.random.seed(1)\n",
-    "    np.random.shuffle(full_training_data)\n",
-    "    reduced_training_data = full_training_data[0:1000]\n",
-    "    write_json(orig_training_file, reduced_training_data)\n",
     "    \n",
     "training_file = 'data/training_data.json'\n",
     "golden_testing_file = 'data/golden_testing_data.json'"
@@ -80,12 +93,12 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Model saved at:  trained_models_lr/version_0\n"
+      "Trained model exists. Skipping training again.\n"
      ]
     }
    ],
    "source": [
-    "from model_logistic_regression import get_accuracy_lr, train_model_lr\n",
+    "from model_files import get_accuracy_lr, train_model_lr\n",
     "train_model_lr(training_file, 'version_0')"
    ]
   },
@@ -209,7 +222,7 @@
       "Kicking off re-training\n",
       "368 data-points selected out of 768\n",
       "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2840  data-points\n",
-      "Model saved at:  trained_models_lr/version_1\n",
+      "Trained model exists. Skipping training again.\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
@@ -272,24 +285,14 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Epoch 0: Loss 4.843758450400445\n",
-      "Epoch 1: Loss 1.3056830919407834\n",
-      "Epoch 2: Loss 0.963068675014696\n",
-      "Epoch 3: Loss 0.9446813049870534\n",
-      "Epoch 4: Loss 0.8719852773281044\n",
-      "Epoch 5: Loss 0.5867635330158067\n",
-      "Epoch 6: Loss 0.48831840431328954\n",
-      "Epoch 7: Loss 0.5206127582173541\n",
-      "Epoch 8: Loss 0.3507806431908619\n",
-      "Epoch 9: Loss 0.29904839011273465\n",
-      "Model saved at:  trained_models_torch/version_0\n"
+      "Trained model exists. Skipping training again.\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "\n",
-    "from model_torch import get_accuracy_torch, train_model_torch, BinaryClassification\n",
+    "from model_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch('data/training_data.json', 'version_0')"
    ]
   },
@@ -315,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "0.946792956582544"
+       "0.9184412942597419"
       ]
      },
      "execution_count": 8,
@@ -368,17 +371,7 @@
       "Kicking off re-training\n",
       "255 data-points selected out of 1008\n",
       "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2275  data-points\n",
-      "Epoch 0: Loss 4.456094716983834\n",
-      "Epoch 1: Loss 1.5041649351908155\n",
-      "Epoch 2: Loss 0.7094659108056898\n",
-      "Epoch 3: Loss 0.5479656164785824\n",
-      "Epoch 4: Loss 0.44732532045410295\n",
-      "Epoch 5: Loss 0.4169701081771625\n",
-      "Epoch 6: Loss 0.38897821375919295\n",
-      "Epoch 7: Loss 0.2797425045332354\n",
-      "Epoch 8: Loss 0.23910698301602706\n",
-      "Epoch 9: Loss 0.21545567348820582\n",
-      "Model saved at:  trained_models_torch/version_1\n",
+      "Trained model exists. Skipping training again.\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
@@ -387,8 +380,8 @@
       "Evaluating on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.946792956582544\n",
-      "Retrained model accuracy (ie 255 smartly collected data-points added):  0.9886847625707202\n",
+      "Old model accuracy:  0.9184412942597419\n",
+      "Retrained model accuracy (ie 255 smartly collected data-points added):  0.9847435000953532\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -438,50 +431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-15 22:32:39.163172: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "62/62 [==============================] - 0s 612us/step - loss: 79.1203 - binary_accuracy: 0.3730\n",
-      "Epoch 2/10\n",
-      "62/62 [==============================] - 0s 550us/step - loss: 18.0154 - binary_accuracy: 0.5383\n",
-      "Epoch 3/10\n",
-      "62/62 [==============================] - 0s 526us/step - loss: 5.8314 - binary_accuracy: 0.7470\n",
-      "Epoch 4/10\n",
-      "62/62 [==============================] - 0s 513us/step - loss: 2.9454 - binary_accuracy: 0.8488\n",
-      "Epoch 5/10\n",
-      "62/62 [==============================] - 0s 516us/step - loss: 2.1988 - binary_accuracy: 0.8780\n",
-      "Epoch 6/10\n",
-      "62/62 [==============================] - 0s 515us/step - loss: 1.9223 - binary_accuracy: 0.8871\n",
-      "Epoch 7/10\n",
-      "62/62 [==============================] - 0s 519us/step - loss: 1.7631 - binary_accuracy: 0.9062\n",
-      "Epoch 8/10\n",
-      "62/62 [==============================] - 0s 515us/step - loss: 1.6675 - binary_accuracy: 0.9093\n",
-      "Epoch 9/10\n",
-      "62/62 [==============================] - 0s 519us/step - loss: 1.5129 - binary_accuracy: 0.9093\n",
-      "Epoch 10/10\n",
-      "62/62 [==============================] - 0s 513us/step - loss: 1.4336 - binary_accuracy: 0.9194\n",
-      "INFO:tensorflow:Assets written to: trained_models_tf/version_0/assets\n",
-      "Model saved at:  trained_models_tf/version_0\n"
+      "Training on:  data/training_data.json  which has  1000  data-points\n",
+      "Trained model exists. Skipping training again.\n"
      ]
     }
    ],
@@ -489,7 +447,7 @@
     "import tensorflow as tf\n",
     "tf.config.set_visible_devices([], 'GPU')\n",
     "\n",
-    "from model_tf import get_accuracy_tf, train_model_tf\n",
+    "from model_files.model_tf import get_accuracy_tf, train_model_tf\n",
     "train_model_tf('data/training_data.json', 'version_0')"
    ]
   },
@@ -502,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -510,16 +468,16 @@
      "output_type": "stream",
      "text": [
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 350us/step\n"
+      "492/492 [==============================] - 0s 213us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9422795753607527"
+       "0.910685906808213"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -562,33 +520,33 @@
       "Deleting the folder:  uptrain_smart_data__edge_cases\n",
       "Deleting the folder:  uptrain_logs\n",
       "50  edge-cases collected out of  192  inferred samples\n",
-      "101  edge-cases collected out of  400  inferred samples\n",
-      "150  edge-cases collected out of  608  inferred samples\n",
-      "202  edge-cases collected out of  816  inferred samples\n",
-      "252  edge-cases collected out of  976  inferred samples\n",
+      "101  edge-cases collected out of  384  inferred samples\n",
+      "150  edge-cases collected out of  592  inferred samples\n",
+      "203  edge-cases collected out of  816  inferred samples\n",
+      "253  edge-cases collected out of  976  inferred samples\n",
       "Kicking off re-training\n",
-      "252 data-points selected out of 976\n",
-      "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2260  data-points\n",
+      "253 data-points selected out of 976\n",
+      "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2265  data-points\n",
       "Epoch 1/10\n",
-      "141/141 [==============================] - 0s 547us/step - loss: 38.9979 - binary_accuracy: 0.5638\n",
+      "141/141 [==============================] - 0s 406us/step - loss: 18.0626 - binary_accuracy: 0.6640\n",
       "Epoch 2/10\n",
-      "141/141 [==============================] - 0s 501us/step - loss: 6.5352 - binary_accuracy: 0.8054\n",
+      "141/141 [==============================] - 0s 403us/step - loss: 3.7689 - binary_accuracy: 0.8732\n",
       "Epoch 3/10\n",
-      "141/141 [==============================] - 0s 521us/step - loss: 2.6563 - binary_accuracy: 0.8808\n",
+      "141/141 [==============================] - 0s 410us/step - loss: 3.0864 - binary_accuracy: 0.8985\n",
       "Epoch 4/10\n",
-      "141/141 [==============================] - 0s 510us/step - loss: 1.8180 - binary_accuracy: 0.9025\n",
+      "141/141 [==============================] - 0s 400us/step - loss: 2.7569 - binary_accuracy: 0.9136\n",
       "Epoch 5/10\n",
-      "141/141 [==============================] - 0s 501us/step - loss: 1.3284 - binary_accuracy: 0.9242\n",
+      "141/141 [==============================] - 0s 392us/step - loss: 2.5093 - binary_accuracy: 0.9246\n",
       "Epoch 6/10\n",
-      "141/141 [==============================] - 0s 503us/step - loss: 1.1194 - binary_accuracy: 0.9313\n",
+      "141/141 [==============================] - 0s 389us/step - loss: 2.2866 - binary_accuracy: 0.9286\n",
       "Epoch 7/10\n",
-      "141/141 [==============================] - 0s 510us/step - loss: 0.9591 - binary_accuracy: 0.9384\n",
+      "141/141 [==============================] - 0s 385us/step - loss: 2.0372 - binary_accuracy: 0.9322\n",
       "Epoch 8/10\n",
-      "141/141 [==============================] - 0s 504us/step - loss: 0.8411 - binary_accuracy: 0.9433\n",
+      "141/141 [==============================] - 0s 395us/step - loss: 1.8544 - binary_accuracy: 0.9402\n",
       "Epoch 9/10\n",
-      "141/141 [==============================] - 0s 492us/step - loss: 0.7836 - binary_accuracy: 0.9490\n",
+      "141/141 [==============================] - 0s 396us/step - loss: 1.6899 - binary_accuracy: 0.9450\n",
       "Epoch 10/10\n",
-      "141/141 [==============================] - 0s 500us/step - loss: 0.7556 - binary_accuracy: 0.9468\n",
+      "141/141 [==============================] - 0s 410us/step - loss: 1.5552 - binary_accuracy: 0.9517\n",
       "INFO:tensorflow:Assets written to: trained_models_tf/version_1/assets\n",
       "Model saved at:  trained_models_tf/version_1\n",
       "Model retraining done...\n",
@@ -596,13 +554,13 @@
       "Training on:  data/training_data.json  which has  1000  data-points\n",
       "Trained model exists. Skipping training again.\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 343us/step\n",
+      "492/492 [==============================] - 0s 213us/step\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 344us/step\n",
+      "492/492 [==============================] - 0s 209us/step\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9422795753607527\n",
-      "Retrained model accuracy (ie 252 smartly collected data-points added):  0.973301125166868\n",
+      "Old model accuracy:  0.910685906808213\n",
+      "Retrained model accuracy (ie 253 smartly collected data-points added):  0.9774330938910432\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -636,6 +594,25 @@
     "    if framework_tf.version > 1:\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
+      "TensorBoard 2.11.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tensorboard --logdir uptrain_logs"
+   ]
   }
  ],
  "metadata": {
@@ -654,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
