--- a/examples/orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
+++ b/examples/orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will see how we can use UpTrain package to check for data integrity, both on input data as well as custom metrics"
+    "In this notebook, we will see how we can use UpTrain package to identify concept drift ie degradation in model's performance. We will use DDM (Drift Detection Method) for the same."
    ]
   },
   {
@@ -19,9 +19,11 @@
     "import zipfile\n",
     "import numpy as np\n",
     "import uptrain\n",
+    "import sys\n",
+    "sys.path.insert(0,'..')\n",
     "\n",
-    "from dataset import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
-    "from pushup_signal import body_length_signal\n",
+    "from model_files import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
+    "from contextlib import redirect_stdout\n",
     "\n",
     "import joblib\n",
     "import json\n",
@@ -32,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download dataset from remote"
+    "Let's first download the dataset from remote and define the testing and annotation files"
    ]
   },
   {
@@ -48,27 +50,32 @@
     "orig_training_file = 'data/training_data.json'\n",
     "if not os.path.exists(data_dir):\n",
     "    try:\n",
-    "        file_downloaded_ok = subprocess.check_output(\"wget \" + remote_url, shell=True)\n",
+    "        # Most Linux distributions have Wget installed by default.\n",
+    "        # Below command is to install wget for MacOS\n",
+    "        wget_installed_ok = subprocess.call(\"brew install wget\", shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
+    "        print(\"Successfully installed wget\")\n",
     "    except:\n",
+    "        dummy = 1\n",
+    "    try:\n",
+    "        if not os.path.exists(\"data.zip\"):\n",
+    "            file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
+    "            print(\"Data downloaded\")\n",
+    "        with zipfile.ZipFile(\"data.zip\", 'r') as zip_ref:\n",
+    "            zip_ref.extractall(\"./\")\n",
+    "        full_training_data = read_json(orig_training_file)\n",
+    "        np.random.seed(1)\n",
+    "        np.random.shuffle(full_training_data)\n",
+    "        reduced_training_data = full_training_data[0:1000]\n",
+    "        write_json(orig_training_file, reduced_training_data)\n",
+    "        print(\"Prepared Example Dataset\")\n",
+    "        os.remove(\"data.zip\")\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "        print(\"Could not load training data\")\n",
-    "    with zipfile.ZipFile(\"data.zip\", 'r') as zip_ref:\n",
-    "        zip_ref.extractall(\"./\")\n",
     "\n",
-    "    full_training_data = read_json(orig_training_file)\n",
-    "    np.random.seed(1)\n",
-    "    np.random.shuffle(full_training_data)\n",
-    "    reduced_training_data = full_training_data[0:1000]\n",
-    "    write_json(orig_training_file, reduced_training_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "real_world_test_cases = 'data/real_world_testing_data.json'\n",
     "golden_testing_file = 'data/golden_testing_data.json'\n",
+    "annotation_args = {'master_file': 'data/master_annotation_data.json'}\n",
     "\n",
     "inference_batch_size = 16"
    ]
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +102,7 @@
     }
    ],
    "source": [
-    "from model_torch import get_accuracy_torch, train_model_torch, BinaryClassification\n",
+    "from model_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch('data/training_data.json', 'version_0')"
    ]
   },
@@ -103,12 +110,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we get the model accuracy on testing dataset, which is again low due to misclassification of Pushup signals."
+    "Next, we get the model accuracy on testing dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,10 +128,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9086517068209269"
+       "0.9184412942597419"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,54 +144,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's define the UpTrain config to check data integrity. We have defined two checks:\n",
-    "\n",
-    "1. Check if the input features are not null. \n",
-    "\n",
-    "2. Check if body length (a custom defined metric) is greater than 50"
+    "Let's define the UpTrain config to detect Concept drift and use DDM as the algorithm for the same"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cfg = {\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
-    "        'measurable_args': {\n",
-    "            'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
-    "            'feature_name': 'kps'\n",
-    "        },\n",
-    "        'integrity_type': 'non_null'\n",
-    "    },\n",
-    "    {\n",
-    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
-    "        'measurable_args': {\n",
-    "            'type': uptrain.MeasurableType.CUSTOM,\n",
-    "            'signal_formulae': uptrain.Signal(\"body_length\", body_length_signal),\n",
-    "        },\n",
-    "        \"integrity_type\": \"greater_than\",\n",
-    "        \"threshold\": 50\n",
-    "    },\n",
-    "    ],\n",
+    "        'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "        'algorithm': uptrain.DataDriftAlgo.DDM\n",
+    "    }],\n",
     "    \"data_identifier\": \"id\",\n",
     "    \"training_args\": {\n",
-    "        \"fold_name\": \"uptrain_smart_data__data_integrity\",\n",
+    "        \"fold_name\": \"uptrain_smart_data__concept_drift\",\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Deleting the folder:  uptrain_smart_data__concept_drift\n",
       "Deleting the folder:  uptrain_logs\n"
      ]
     }
@@ -201,6 +191,9 @@
     "model.load_state_dict(torch.load(model_dir + model_save_name))\n",
     "model.eval()\n",
     "\n",
+    "gt_data = read_json(annotation_args['master_file'])\n",
+    "all_gt_ids = [x['id'] for x in gt_data]\n",
+    "\n",
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
@@ -208,20 +201,23 @@
     "    x_test = torch.tensor(inputs[\"data\"][\"kps\"]).type(torch.float)\n",
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
+    "    idens = framework_torch.log(inputs=inputs, outputs=preds)\n",
     "\n",
-    "    # Log model inputs and outputs to the uptrain Framework to monitor data integrity\n",
-    "    idens = framework_torch.log(inputs=inputs, outputs=preds)"
+    "    # Attach ground truth for accuracy evaluation\n",
+    "    this_elem_gt = [gt_data[all_gt_ids.index(x)]['gt'] for x in elem[0]['id']]\n",
+    "    framework_torch.log(identifiers=idens, gts=this_elem_gt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFlow installation not found - running with reduced feature set.\n",
       "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
       "TensorBoard 2.11.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
       "^C\n"
