--- a/examples/orientation_classification/uptrain_test.ipynb
+++ b/examples/orientation_classification/uptrain_test.ipynb
@@ -19,9 +19,10 @@
     "import zipfile\n",
     "import numpy as np\n",
     "import uptrain\n",
+    "from contextlib import redirect_stdout\n",
     "\n",
-    "from dataset import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
-    "from pushup_signal import body_length_signal, pushup_signal, plot_all_cluster\n",
+    "from model_files import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
+    "from model_files import body_length_signal, pushup_signal, plot_all_cluster\n",
     "\n",
     "import json\n",
     "import torch"
@@ -47,17 +48,28 @@
     "orig_training_file = 'data/training_data.json'\n",
     "if not os.path.exists(data_dir):\n",
     "    try:\n",
-    "        file_downloaded_ok = subprocess.check_output(\"wget \" + remote_url, shell=True)\n",
+    "        # Most Linux distributions have Wget installed by default.\n",
+    "        # Below command is to install wget for MacOS\n",
+    "        wget_installed_ok = subprocess.call(\"brew install wget\", shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
+    "        print(\"Successfully installed wget\")\n",
     "    except:\n",
-    "        print(\"Could not load training data\")\n",
-    "    with zipfile.ZipFile(\"data.zip\", 'r') as zip_ref:\n",
-    "        zip_ref.extractall(\"./\")\n",
-    "\n",
-    "    full_training_data = read_json(orig_training_file)\n",
-    "    np.random.seed(1)\n",
-    "    np.random.shuffle(full_training_data)\n",
-    "    reduced_training_data = full_training_data[0:1000]\n",
-    "    write_json(orig_training_file, reduced_training_data)"
+    "        dummy = 1\n",
+    "    try:\n",
+    "        if not os.path.exists(\"data.zip\"):\n",
+    "            file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
+    "            print(\"Data downloaded\")\n",
+    "        with zipfile.ZipFile(\"data.zip\", 'r') as zip_ref:\n",
+    "            zip_ref.extractall(\"./\")\n",
+    "        full_training_data = read_json(orig_training_file)\n",
+    "        np.random.seed(1)\n",
+    "        np.random.shuffle(full_training_data)\n",
+    "        reduced_training_data = full_training_data[0:1000]\n",
+    "        write_json(orig_training_file, reduced_training_data)\n",
+    "        print(\"Prepared Example Dataset\")\n",
+    "        os.remove(\"data.zip\")\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        print(\"Could not load training data\")"
    ]
   },
   {
@@ -108,7 +120,7 @@
     }
    ],
    "source": [
-    "from model_torch import get_accuracy_torch, train_model_torch, BinaryClassification\n",
+    "from model_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch('data/training_data.json', 'version_0')"
    ]
   },
@@ -134,7 +146,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9086517068209269"
+       "0.8841777382238891"
       ]
      },
      "execution_count": 5,
@@ -258,7 +270,7 @@
       "Evaluating on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9086517068209269\n",
+      "Old model accuracy:  0.8841777382238891\n",
       "Retrained model accuracy (ie 255 smartly collected data-points added):  0.992498887546882\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
@@ -308,6 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFlow installation not found - running with reduced feature set.\n",
       "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
       "TensorBoard 2.11.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
       "^C\n"
